# tg-bot-finance

./: .gitignore  README.md  prompt.json  pyproject.toml  yandex_answer.txt
bot_finance/: bot.py  connect_db.py  db.sql  gpt_3.py  keyboard_telegram.py  message_text.py  sql_query.py  yandex_gpt.py
